# art_fight_2025

./: Cargo.toml  README.md
src/: audio_system.rs  common.rs  dino_run.rs  dino_run_audio.rs  dino_run_characters.rs  dino_run_environment.rs  dino_run_mechanics.rs  main.rs
src/dino_run/: audio.rs  character.rs  environment.rs  mechanics.rs
