[package]
name = "art_fight"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "x11",
    "bevy_window",
    "bevy_winit",    # window/input handling
    "bevy_render",   # core rendering
    "bevy_asset",    # asset system for loading assets
    "bevy_audio",    # only if you use audio, and then add "wav"
    "bevy_pbr",
    "async_executor",
    "wav"            # WAV support (only meaningful if bevy_audio is included)
] }
fastrand = "2.3.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
