[package]
name = "art_fight"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "x11",
    "bevy_winit",    # window/input handling
    "bevy_render",   # core rendering
    "bevy_pbr",
    "async_executor"
] }
fastrand = "2.3.0"
rodio = "0.20.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
